--- a/themes/Mango/layouts/_default/baseof.html
+++ b/themes/Mango/layouts/_default/baseof.html
@@ -3,6 +3,7 @@
 <head>
   {{ partial "head.html" . }}
   {{ partial "schema.html" . }}
+{{ partial "google-analytics.html" . }}
 </head>
 <body itemscope itemtype="https://schema.org/WebPage">
 
